--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,7 +1,8 @@
-.card{
-    height: 200px;
+.card {
+  height: 200px;
+  cursor: pointer;
 }
 
-i{
-    color: var(--primary-color);
+i {
+  color: var(--primary-color);
 }
