--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
+@import 'bootstrap/dist/css/bootstrap.min.css';
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 :root {
@@ -7,7 +8,7 @@
   --navbar-footer-color: #f9f9f9;
 }
 
-.body {
+body {
   font-family: "Roboto", sans-serif;
   font-size: 12px;
   color: var(--body-text-color);
@@ -43,12 +44,12 @@
 .text-theme-primary {
     color: var(--primary-color);
 }
-input[type="text"],
-input[type="email"] {
-  height: 60px;
-  padding-left: 20px;
-  font-size: 13px;
-  width: 100%;
+i
+input[type = text],input[type = email],input[type = password]{
+    height: 60px;
+    padding-left: 20px;
+    font-size: 13px;
+    width: 100%;
 }
 
 .btn-theme {
